          characters only. Suggested by Avi Flax.
        - Static methods added to Reference: isGenericDelimiter(char),
          isReserved(char), isSubDelimiter(char), isUnreserved(char)
          and isValid(char).   
        - DomRepresentation now has a protected createTransformer()
          method that can be overridden to customize the properties of
          the JAXP Transformer. Contributed by Rob Heittman.           
    - NRE and Extension Enhancements
        - Made the ServerServlet.create*() method protected instead of 
          public.
        - Added a ServerServlet.createCall() and createWarClient() 
          methods for easier subclassing by the XDB extension. 
          Some contributions from Marcelo Ochoa.
        - Added new javax.annotation library for the JAX-RS extension.
        - Added ServerServlet.getClass() method to facilitate 
          subclassing by the XDB extension. Suggested by Marcelo Ochoa.
    - Misc
        - Reformatting of the changes log. Contributed by Avi Flax.
        - All Component subclasses now use a main method that throws 
          exceptions and takes a string array as parameter.
        - More precise log message for a Resource with no variant.
        - Otpimized Eclipse dependencies by leveraging reexport option.
        - Updated Spring to version 2.5.2.
        - Improved handling of connectors created without a protocol.
          Contributed by Avi Flax.
        - Representations returned by the CLAP connector now have their
          modification date set if it is based on a file. Suggested by
          Keke.
        - Refactored and improved logging for Guard and challenge
          processing. Suggested by Alex Milowski.
        - Updated Reference's Javadocs to mention that getters do not 
          automatically do URI decoding. Suggested by Paul J. Lucas.
        - Refactored NRE helpers hiearchy to take advantage of generics
          and remove duplicatations.
 